--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb;MODE=Oracle
+    url: jdbc:h2:mem:testdb;MODE=Oracle;LOCK_TIMEOUT=0
     driverClassName: org.h2.Driver
     username: sa
     password:
