--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb;MODE=Oracle
+    url: jdbc:h2:mem:testdb;MODE=Oracle;LOCK_TIMEOUT=0
     driverClassName: org.h2.Driver
     username: sa
     password:
@@ -14,6 +14,10 @@ spring:
     console:
       enabled: true
       path: /h2-console
+  transaction:
+    default-timeout: 30
+    # 내부 트랜잭션 실패 시 전체를 마킹하지 않도록 설정 (신중히 사용)
+    rollback-on-commit-failure: false
 
 mybatis:
   mapper-locations: classpath:/mappers/**/*.xml
@@ -23,3 +27,6 @@ mybatis:
 logging:
   level:
     "[com.example.lockretry]": DEBUG
+    "[org.springframework.transaction.interceptor]": TRACE
+    "[org.springframework.orm.jpa.JpaTransactionManager]": DEBUG
+    "[org.hibernate.resource.transaction]": DEBUG
