--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,8 +16,7 @@ spring:
       path: /h2-console
   transaction:
     default-timeout: 30
-    # 내부 트랜잭션 실패 시 전체를 마킹하지 않도록 설정 (신중히 사용)
-    rollback-on-commit-failure: false
+    # Spring의 기본 롤백 동작을 따르도록 설정 제거
 
 mybatis:
   mapper-locations: classpath:/mappers/**/*.xml
